# TelegrammBotParkPiter

./: .gitignore  README.md  handlers.py  hash.py  hash_f.py  main.py  pyproject.toml  qrunpack.py  run_main.bat
app/: main.py  qr_reader.py
