[project]
name = "telegrammbotparkpiter"
version = "0.1.0"
description = ""
authors = [
    {name = "george2066",email = "george2066@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyinstaller (>=6.12.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
