[project]
name = "telegrammbotparkpiter"
version = "0.1.0"
description = ""
authors = [
    {name = "George Rodionov",email = "george2066@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyzbar (>=0.1.9,<0.2.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "qrcode (>=8.1,<9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
